# kedro-tuturiol

./: pyproject.toml  stats.json
conf/base/: catalog.yml
notebooks/: plot_ypred_ytest.ipynb  starter.ipynb
src/: stats.json
src/spaceflights_pandas/pipelines/data_science/: nodes.py  pipeline.py
