[tool.poetry]
name = "spaceflights"
version = "1"
description = "spaceflights tuturial"
authors = ["karmijn <khe@live.nl>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.10,<3.11"
kedro = "^0.19.3"
ipykernel = "^6.29.4"
kedro-datasets = "^2.1.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pyarrow = "^15.0.2"
fastparquet = "^2024.2.0"
scikit-learn = "^1.4.2"
plotly = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "spaceflights_pandas"
readme = "README.md"
dynamic = ["dependencies", "version"]

[project.scripts]
spaceflights-pandas = "spaceflights_pandas.__main__:main"

[tool.kedro]
package_name = "spaceflights_pandas"
project_name = "performance optimisation engine"
kedro_init_version = "0.19.3"